<resources>
    <string name="app_name">My Harmonica Songs</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_delete">DELETE</string>
    <string name="button_reset">RESET</string>
    <string name="button_restore">RESTORE</string>
    <string name="button_shift">SHIFT</string>
    <string name="button_cancel">CANCEL</string>
    <string name="main_activity_menu_add_song">Add Song</string>
    <string name="main_activity_menu_search">Search</string>
    <string name="main_activity_menu_random_song">Randomize</string>
    <string name="main_activity_menu_settings">Settings</string>
    <string name="main_activity_text_no_songs">Press \"+\" to add a song</string>
    <string name="main_activity_hint_search">Search song</string>
    <string name="main_activity_toast_song_deleted">Song deleted</string>
    <string name="main_activity_toast_no_songs">You have no songs</string>
    <string name="main_activity_delete_dialog_description" formatted="false">Are you sure you want to delete %s?</string>
    <string name="song_dialog_hint_title">Title</string>
    <string name="song_dialog_hint_author">Author</string>
    <string name="song_dialog_toast_no_title">Please type in a title</string>
    <string name="song_dialog_text_add_song">Add Song</string>
    <string name="song_dialog_text_edit_song">Edit Song</string>
    <string name="song_dialog_text_key">Key</string>
    <string name="song_dialog_text_harp_type">Harp type</string>
    <string name="song_dialog_text_harp_type_diatonic_10">Diatonic(10 Holes)</string>
    <string name="song_dialog_text_harp_type_chromatic_12">Chromatic(12 Holes)</string>
    <string name="song_dialog_text_harp_type_chromatic_16">Chromatic(16 Holes)</string>
    <string-array name="song_dialog_spinner_harp_type">
        <item>Diatonic (10 Holes)</item>
        <item>Chromatic (12 Holes)</item>
        <item>Chromatic (16 Holes)</item>
    </string-array>
    <string name="song_activity_text_no_notes">Press \"+\" to add a note</string>
    <string name="song_activity_menu_edit">Edit</string>
    <string name="song_activity_menu_delete">Delete</string>
    <string name="song_activity_menu_add_note">Add note</string>
    <string name="song_activity_menu_insert_row">Insert row</string>
    <string name="song_activity_menu_delete_row">Delete row</string>
    <string name="song_activity_menu_copy_row">Copy row</string>
    <string name="song_activity_menu_paste_row">Paste row</string>
    <string name="song_activity_menu_add_section">Add section tag</string>
    <string name="song_activity_menu_edit_section">Edit section tag</string>
    <string name="song_activity_menu_delete_section">Delete section tag</string>
    <string name="song_activity_menu_share">Share</string>
    <string name="song_activity_menu_customize">Customize</string>
    <string name="song_activity_menu_instrumental">Instrumental</string>
    <string name="song_activity_menu_toggle_media">Show/Hide Media player</string>
    <string name="song_activity_menu_shift_notes">Shift notes</string>
    <string name="song_activity_toast_note_copied">note copied</string>
    <string name="song_activity_toast_notes_copied">notes copied</string>
    <string name="song_activity_toast_no_notes_copied">No notes copied</string>
    <string name="song_activity_toast_no_audio_file">No audio file added</string>
    <string name="song_activity_toast_media_player_init_error">Error initializing media player</string>
    <string name="song_activity_toast_notes_shifted">Notes shifted</string>
    <string name="song_activity_text_share_to">Share with…</string>
    <string name="song_activity_shift_warning_dialog_title" formatted="false">Shift only %d notes?</string>
    <string name="song_activity_shift_warning_dialog_description" formatted="false">%d out of %d notes cannot be shifted. Do you want to shift the other %d notes?</string>
    <string name="note_picker_dialog_button_show_bendings">Show bends</string>
    <string name="note_picker_dialog_button_hide_bendings">Hide bends</string>
    <string name="note_picker_view_button_text">Text</string>
    <string name="note_picker_view_button_bends">Bends</string>
    <string name="note_picker_view_button_slide">Slide</string>
    <string name="note_picker_view_button_copy">Copy</string>
    <string name="note_picker_view_button_paste">Paste</string>
    <string name="note_picker_view_button_insert">Insert</string>
    <string name="note_picker_view_button_section">Section</string>
    <string name="note_picker_view_button_delete">Delete</string>
    <string name="note_picker_view_hint_text">Note text…</string>
    <string name="note_picker_view_hint_section_text">Section text…</string>
    <string name="section_dialog_hint_section_name">Section name</string>
    <string name="section_dialog_toast_no_section_name">Please type in a section name</string>
    <string name="section_dialog_text_add_section">Add Section</string>
    <string name="section_dialog_text_edit_section">Edit Section</string>
    <string name="notes_shift_dialog_increase_notes_text">Increase notes by 1 octave</string>
    <string name="notes_shift_dialog_decrease_notes_text">Decrease notes by 1 octave</string>
    <string name="notes_shift_dialog_eligible_notes">notes eligible</string>
    <string name="notes_shift_dialog_no">No</string>
    <string name="notes_shift_dialog_all">All</string>
    <string name="insert_note_dialog_text_left">Left</string>
    <string name="insert_note_dialog_text_right">Right</string>
    <string name="insert_note_dialog_text_top">Top</string>
    <string name="insert_note_dialog_text_bottom">Bottom</string>
    <string name="time_picker_dialog_title">Select a Time</string>
    <string name="time_picker_dialog_description">The scrolling will start when the song reaches this time.</string>
    <string name="time_picker_dialog_text_minute">min</string>
    <string name="time_picker_dialog_text_second">sec</string>
    <string name="time_picker_dialog_button_ok">OK</string>
    <string name="section_picker_dialog_title">Select a Section</string>
    <string name="section_line_picker_dialog_title">Select a Section Line</string>
    <string name="section_line_picker_dialog_description">The scrolling will stop at this line in the section.</string>
    <string name="qa_activity_text_title">Questions &amp; answers</string>
    <string name="qa_activity_text_m_songs">SONGS</string>
    <string name="qa_activity_text_q_add_song">How do I add a song?</string>
    <string name="qa_activity_text_a_add_song">While on the songs screen, tap the + button on the top to add a new song. Then fill in the title, author (optional) and the key in which the song is played (optional).</string>
    <string name="qa_activity_text_q_key">What if I don\'t know the key of a song?</string>
    <string name="qa_activity_text_a_key">If you only have one harmonica, then this doesn\'t affect you very much and you can leave it in the default key of C. But this is really useful if you have more harmonicas in different keys or if you play with a band and you all have to play in the same key.</string>
    <string name="qa_activity_text_q_search">How can I filter my songs?</string>
    <string name="qa_activity_text_a_search">You can press the search button on the top and type in a song title or an author.</string>
    <string name="qa_activity_text_m_notes">NOTES</string>
    <string name="qa_activity_text_q_note">How do I add a note?</string>
    <string name="qa_activity_text_a_note">Open a song, tap any white plus button, then pick a note from the harmonica.</string>
    <string name="qa_activity_text_q_bend_note">How do I add a bend note?</string>
    <string name="qa_activity_text_a_bend_note">After you tap the plus button, press the Show bends button. Bend notes will show up indicated by one or more \' signs. Each \' represents half a tone.</string>
    <string name="qa_activity_text_q_note_words">How can I add a word under a note?</string>
    <string name="qa_activity_text_a_note_words">After you tap the plus button, type in a word in the Syllable text field. Then select a note number and the note will be added with a word under it.</string>
    <string name="qa_activity_text_q_delete_row">How can I delete a row of notes?</string>
    <string name="qa_activity_text_a_delete_row">Press and hold the plus button at the end of the row you want to delete. When the menu shows up, select Delete row.</string>
    <string name="qa_activity_text_q_insert_row">How can I insert a row between 2 other rows?</string>
    <string name="qa_activity_text_a_insert_row">Press and hold the plus button at the end of the first row, then select the Insert row option. Then add a note. This will insert the note between the 2 rows.</string>
    <string name="qa_activity_text_q_copy_paste_notes">How can I copy/paste notes?</string>
    <string name="qa_activity_text_a_copy_paste_notes">Press and hold the plus button at the end of the row you want to copy, then select the Copy row option. Then press and hold another plus button and select Paste row.</string>
    <string name="qa_activity_text_m_sections">SECTIONS</string>
    <string name="qa_activity_text_q_sections">What are sections?</string>
    <string name="qa_activity_text_a_sections">Sections are a group of notes that compose a song. Some common sections would be Verse, Chorus, Bridge, etc.</string>
    <string name="qa_activity_text_q_add_section">How can I add a section?</string>
    <string name="qa_activity_text_a_add_section">Press and hold the plus button at the end of the first row of the section, then select Add section. Then type in a section name. This will add a section text marker above the row you selected.</string>
    <string name="qa_activity_text_m_customizations">CUSTOMIZATIONS</string>
    <string name="qa_activity_text_q_customize_notes">How can I customize my notes?</string>
    <string name="qa_activity_text_a_customize_notes">On the tablature screen tap options, then select Customize. Here you can customize notes, text colors, background colors, etc.</string>
    <string name="qa_activity_text_q_reset_customizations">How can I reset my customizations to default settings?</string>
    <string name="qa_activity_text_a_reset_customizations">On the customize screen tap options, then select Reset.</string>
    <string name="qa_activity_text_m_audio_files">AUDIO FILES</string>
    <string name="qa_activity_text_q_add_audio_file">How can I add an audio file to a song?</string>
    <string name="qa_activity_text_a_add_audio_file">On the tablature screen tap options, then select Add audio file. You can add the file using other apps like File Manager or Google Drive.</string>
    <string name="qa_activity_text_q_play_song">How do I play a song file that I added?</string>
    <string name="qa_activity_text_a_play_song">If you added an audio file, on the tablature screen tap the musical note. When the audio panel shows up tap the play button.</string>
    <string name="qa_activity_text_m_backup_restore">BACKUP / RESTORE</string>
    <string name="qa_activity_text_q_backup">How do I make a backup file?</string>
    <string name="qa_activity_text_a_backup">On the settings screen, tap the backup option. This will create a file named songs.mhs in the destination you choose.</string>
    <string name="qa_activity_text_q_backup_data">Will it backup everything?</string>
    <string name="qa_activity_text_a_backup_data">Almost, it will save all your songs, notes, sections, but not your audio files and customizations. These have to be added manually.</string>
    <string name="qa_activity_text_q_restore">How do I restore my data from a backup file?</string>
    <string name="qa_activity_text_a_restore">On the settings screen, tap the restore option. Then select the mhs file you want to restore the data from.</string>
</resources>