<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_note"
        android:icon="@drawable/icon_plus2"
        android:title="@string/song_activity_menu_add_note" />
    <item
        android:id="@+id/action_delete_row"
        android:icon="@drawable/icon_delete2"
        android:title="@string/song_activity_menu_delete_row" />
    <item
        android:id="@+id/action_insert_row"
        android:icon="@drawable/icon_insert"
        android:title="@string/song_activity_menu_insert_row" />
    <item
        android:id="@+id/action_copy_row"
        android:icon="@drawable/icon_copy"
        android:title="@string/song_activity_menu_copy_row" />
    <item
        android:id="@+id/action_paste_row"
        android:icon="@drawable/icon_paste"
        android:title="@string/song_activity_menu_paste_row" />
    <item
        android:id="@+id/action_add_section"
        android:icon="@drawable/icon_plus2"
        android:title="@string/song_activity_menu_add_section" />
    <item
        android:id="@+id/action_edit_section"
        android:icon="@drawable/icon_edit"
        android:title="@string/song_activity_menu_edit_section" />
    <item
        android:id="@+id/action_delete_section"
        android:icon="@drawable/icon_delete2"
        android:title="@string/song_activity_menu_delete_section" />
</menu>
