<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background"
    tools:context="com.mivas.myharmonicasongs.CreditsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black_30"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/qa_activity_text_title"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/greyEE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bu1"
            android:paddingLeft="@dimen/bu1"
            android:paddingRight="@dimen/bu1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_songs"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_add_song"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_add_song"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_key"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_key"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_notes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_note"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_note"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_bend_note"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_bend_note"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_note_words"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_note_words"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_delete_row"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_delete_row"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_insert_row"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_insert_row"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_copy_paste_notes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_copy_paste_notes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_sections"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_sections"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_sections"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_add_section"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_add_section"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_customizations"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_customize_notes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_customize_notes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_reset_customizations"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_reset_customizations"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_audio_files"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_add_audio_file"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_add_audio_file"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_play_song"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_play_song"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_backup_restore"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_backup"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_backup"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_backup_data"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_backup_data"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_restore"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_restore"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2"
                android:text="@string/qa_activity_text_m_troubleshooting"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_48px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bu1"
                android:text="@string/qa_activity_text_q_add_audio_file_error"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_36px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_activity_text_a_add_audio_file_error"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30px"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>