<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:padding="@dimen/bu1">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/section_line_picker_dialog_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_40px" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/bu3"
        android:layout_marginRight="@dimen/bu3"
        android:layout_marginTop="@dimen/bu1_5"
        android:gravity="center"
        android:text="@string/section_line_picker_dialog_description"
        android:textColor="@color/grey99"
        android:textSize="@dimen/text_size_30px" />

    <NumberPicker
        android:id="@+id/numberpicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bu1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_description"
        android:theme="@style/TimeNumberPicker" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bu4"
        android:layout_below="@+id/numberpicker"
        android:layout_marginTop="@dimen/bu2"
        android:background="@drawable/selector_button_generic"
        android:text="@string/time_picker_dialog_button_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_40px" />
</RelativeLayout>